--- a/a2/index.html
+++ b/a2/index.html
@@ -81,7 +81,7 @@
 
         <div class="row">
           <div class="col-md-4">
-            <img src="media/standard-seat.jpg" alt="standard-seat" class="seat-img">
+            <img src="media/standard-seat.jpg" alt="standard-seat" class="img-fluid  seat-img">
           </div>
           <div class="col-md-8 seat-info">
             <h5>Standard Seating</h5>
@@ -97,7 +97,7 @@
 
         <div class="row">
           <div class="col-md-4">
-            <img src="media/first-class-seat.jpg" alt="first-class-seat" class="seat-img">
+            <img src="media/first-class-seat.jpg" alt="first-class-seat" class="img-fluid  seat-img">
           </div>
           <div class="col-md-8 seat-info">
             <div class="seat-content">
@@ -114,7 +114,7 @@
         <br>
         <hr style="border: grey solid 1px;" size="10px">
         <br>
-        
+
         <h3>Cutting edge projection and sound system</h3>
         <p>As a stride toward cutting edge movie technologies, we have upgraded our movie projection and sound systems. We officially partnered with Dolby to brings you the best movie viewing experience without any compromises thanks to their Dolby 3D Vision and Dolby Atmos technologies.</p>
 
@@ -122,7 +122,7 @@
 
         <div class="row">
           <div class="col-md-4">
-            <img src="media/dolby-vision-img.png" alt="first-class-seat" class="dolby-sys-img">
+            <img src="media/dolby-vision-img.png" alt="first-class-seat" class="img-fluid dolby-sys-img">
           </div>
           <div class="col-md-8 dolby-info">
             <div class="dolby-content">
@@ -140,7 +140,7 @@
 
         <div class="row">
           <div class="col-md-4">
-            <img src="media/dolby-atmos-img.png" alt="first-class-seat" class="dolby-sys-img">
+            <img src="media/dolby-atmos-img.png" alt="first-class-seat" class="img-fluid dolby-sys-img">
           </div>
           <div class="col-md-8 dolby-info">
             <div class="dolby-content">
@@ -150,17 +150,7 @@
           </div>
         </div>
 
-        <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
-          saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
-          exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
-          sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur
-          quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi non
-          possimus maxime itaque, voluptatum quae nesciunt expedita reprehenderit earum numquam aperiam facere ad
-          obcaecati. Accusamus, veritatis dignissimos. Hic maxime ratione porro! Ex repellendus totam, placeat similique
-          voluptate quod facilis culpa id et minima consequatur veniam excepturi ea. Ratione porro ipsa minima non
-          magnam vero hic iure molestiae illum aliquam repellat perferendis ex maiores est beatae delectus in commodi
-          quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus
-          eaque expedita assumenda modi atque? Doloremque!</p> -->
+
         <!-- Creative Commons image sourced from https://pixabay.com/en/maintenance-under-construction-2422173/ and used for educational purposes only -->
         <!-- <img src='../../media/website-under-construction.png' alt='Website Under Construction' /> -->
       </article>
