--- a/a2/index.html
+++ b/a2/index.html
@@ -28,11 +28,12 @@
   <!-- Link to web font-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee+Inline">
 
   <!-- Link to web icon-->
   <!-- Creative Commons image sourced from https://www.freelogodesign.org/preview?lang=en&name=&logo=3cb08b7e-706d-4539-a663-82c8ea221204 and used for educational purposes only -->
-  <link rel="icon" href="media/logo.png">
+  <link rel="icon" href="media/icon.png">
 
   <script src='../wireframe.js'></script>
 </head>
@@ -40,10 +41,12 @@
 <body data-spy="scroll" data-target="#navigation" data-method="auto">
   <div class="container">
     <header id="top">
+      <a href="index.html"><img src="media/logo-banner.jpg" alt="company-logo" id="logo" width="100%"></a>
       <div class="jumbotron">
-        <p id="company-name">CINEMAX</p>
+        <p id="company">Bring your cine experience to new heights <br> Here at <span id="company-name">CINEMAX</span>
+        </p>
         <!-- Creative Commons image sourced from https://www.freelogodesign.org/preview?lang=en&name=&logo=3cb08b7e-706d-4539-a663-82c8ea221204 and used for educational purposes only -->
-        <img src="media/logo.png" alt="company-logo" id="logo">
+        <img src="media/icon.png" alt="cinema-icon">
       </div>
     </header>
     <div class="head-strip"></div>
@@ -64,14 +67,35 @@
     <div class="head-strip"></div>
     <main>
       <article id='About-us'>
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <a href="#seat-intro"><img src="media/seating-banner.jpg" class="d-block w-100" alt="Cinema seats banner"></a>
+            </div>
+            <div class="carousel-item">
+              <a href="#Dolby-vision"><img src="media/dolby-vision-banner.jpg" class="d-block w-100" alt="Dolby Vision banner"></a>
+            </div>
+            <div class="carousel-item">
+              <a href="#Dolby-atmos"><img src="media/dolby-atmos-banner.jpg" class="d-block w-100" alt="Dolby Atmos banner"></a>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <br>
         <h1 id="about-us-header">ABOUT US</h1>
-        
         <br>
 
         <p>Cinemax is a movie theatre that was established to serve local movie enthuasiasts. Eventhough Cinemax was founded a long time ago, our facilites has recently been renovated to make the experience of movie going even more enjoyable. This is an homage to all the that this local communnity has supported us, so we also wanted to give back to this lovely town.</p>
         <br>
 
-        <h3>More comfortable seats</h3>
+        <h3 id="seat-intro">More comfortable seats</h3>
 
         <p>Our goal is for you to have an immersive movie experience, with that in mind, we would like to introduce you
           to our newly equipped seats with better cushioning system. We acknowledge that movies' durations can be
@@ -126,7 +150,7 @@
           </div>
           <div class="col-md-8 dolby-info">
             <div class="dolby-content">
-              <h5>Dolby 3D Vision</h5>
+              <h5 id="Dolby-vision">Dolby 3D Vision</h5>
               <p>With Dolby 3D Vision, you now have the option to view your favorite upcoming movies in 3D with out any
                 compromise to the video quality. Integrated with advanced HDR technology, movies quality will now come
                 with a wider spectrum of color palette and contrast range. Furthermore, thanks to Dolby's 3D technology,
@@ -144,7 +168,7 @@
           </div>
           <div class="col-md-8 dolby-info">
             <div class="dolby-content">
-              <h5>Dolby Atmos</h5>
+              <h5 id="Dolby-atmos">Dolby Atmos</h5>
               <p>Dolby Atmos will gives you powerfull and moving audio by using multiple speakers placed all around the room to give use high definition sound quality so that you can now pick up every bit of sound that the sound producers intended you to pick up, even the tiny sounds such as when a movie character steps on a twig or things approaching from behind. As the result, movies now come to live like never before making you feel even more immmersed in them.</p>
             </div>
           </div>
@@ -159,26 +183,27 @@
       <section id="pricing">
         <h1 id="pricing-header"><img src="media/tickets.png" id="tickets-icon">TICKET PRICES</h1>
         <br>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
+        <h4 id="special-offer"><img src="media/popcorn.svg" alt="Popcorn icon"
+            style="width: 50px; vertical-align: bottom;">CELEBRATE OUR GRAND RE-OPENING WITH <img
+            src="media/special-offer.png" alt="Special offer icon" style="width: 120px; vertical-align: bottom;"></h4>
+        <br>
+        <p>Some promotional paragraph or image here...
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
           saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
           exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
           sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur
           quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi non
           possimus maxime itaque, voluptatum quae nesciunt expedita reprehenderit earum numquam aperiam facere ad
-          obcaecati. Accusamus, veritatis dignissimos. Hic maxime ratione porro! Ex repellendus totam, placeat
-          similique
-          voluptate quod facilis culpa id et minima consequatur veniam excepturi ea. Ratione porro ipsa minima non
-          magnam vero hic iure molestiae illum aliquam repellat perferendis ex maiores est beatae delectus in commodi
-          quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus
-          eaque expedita assumenda modi atque? Doloremque!</p>
+          obcaecati.
+        </p>
         <br>
         <div class="table-responsive">
           <table class="table" id="price-table">
             <thead id="price-head">
               <tr>
                 <th scope="col">Seat Type</th>
-                <th scope="col">
-                  <p id="Sale-col"><span class="badge badge-success">ALL DAY</span> Monday & Friday <br>
+                <th scope="col" id="Sale-col">
+                  <p><span class="badge badge-success">ALL DAY</span> Monday & Friday <br>
                     <hr style="border: white solid 1px;"> 12PM <span class="badge badge-success">EVERY</span> weekday
                   </p>
                 </th>
@@ -227,17 +252,44 @@
           sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur
           quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi non
           possimus maxime itaque, voluptatum quae nesciunt expedita reprehenderit earum numquam aperiam facere ad
-          obcaecati. Accusamus, veritatis dignissimos. Hic maxime ratione porro! Ex repellendus totam, placeat
-          similique
-          voluptate quod facilis culpa id et minima consequatur veniam excepturi ea. Ratione porro ipsa minima non
-          magnam vero hic iure molestiae illum aliquam repellat perferendis ex maiores est beatae delectus in commodi
-          quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus
-          eaque expedita assumenda modi atque? Doloremque!</p>
+          obcaecati.</p>
       </section>
       <div id="break">
       </div>
       <section id="now-showing">
         <h1 id="showing-header"><img src="media/movie.png" id="movie-icon">NOW SHOWING</h1>
+        <br>
+        <div id="carouselMovies" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselMovies" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselMovies" data-slide-to="1"></li>
+            <li data-target="#carouselMovies" data-slide-to="2"></li>
+            <li data-target="#carouselMovies" data-slide-to="3"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="media/avengers-banner.jpg" class="d-block w-100" alt="Avengers Endgame banner">
+            </div>
+            <div class="carousel-item">
+              <img src="media/topend-banner.jpg" class="d-block w-100" alt="Top End Wedding banner">
+            </div>
+            <div class="carousel-item">
+              <img src="media/Dumbo-banner.jpeg" class="d-block w-100" alt="Dumbo banner">
+            </div>
+            <div class="carousel-item">
+              <img src="media/the-happy-prince-banner.jpg" class="d-block w-100" alt="The Happy Prince banner">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselMovies" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselMovies" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <br>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
           saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
           exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
@@ -280,8 +332,10 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <h5 class="card-title">Top End Wedding</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                      additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Day - Hour</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     <img src="media/Mature.png" alt="Rated" width="20%" class="movie-rating">
                   </div>
@@ -300,8 +354,10 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <h5 class="card-title">Dumbo</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                      additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Day - Hour</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     <img src="media/G.svg" alt="Rated G" width="20%" class="movie-rating">
                   </div>
@@ -318,8 +374,10 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <h5 class="card-title">The Happy Prince</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                      additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Day - Hour</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     <img src="media/R.svg" alt="Rated R" width="20%" class="movie-rating">
                   </div>
@@ -334,24 +392,19 @@
       </div>
       <section id="synopsis-area">
         <h1 id="synopsis-header">MOVIE SYNOPSIS</h1>
-        <div class="row">
-          <div class="col-6 border">
+        <br>
+        <div class="row border synopsis">
+          <div class="col-md-6">
+            <h5 class="synopsis-title">Avengers: Endgame <img src="media/PG-13.svg" alt="Rated PG-13" width="20%" class="movie-rating-synopsis"></h5>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
               saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
               exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
               sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur
               quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi
-              non
-              possimus maxime itaque, voluptatum quae nesciunt expedita reprehenderit earum numquam aperiam facere ad
-              obcaecati. Accusamus, veritatis dignissimos. Hic maxime ratione porro! Ex repellendus totam, placeat
-              similique
-              voluptate quod facilis culpa id et minima consequatur veniam excepturi ea. Ratione porro ipsa minima non
-              magnam vero hic iure molestiae illum aliquam repellat perferendis ex maiores est beatae delectus in
-              commodi
-              quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus
+              non quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus
               eaque expedita assumenda modi atque? Doloremque!</p>
           </div>
-          <div class="col-6"></div>
+          <div class="col-md-6 order-first order-md-last"><div class="trailer-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/TcMBFSGVi1c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
         </div>
       </section>
 
