--- a/a2/index.html
+++ b/a2/index.html
@@ -177,7 +177,7 @@
           <div class="col-md-8 dolby-info">
             <div class="dolby-content">
               <h5 id="Dolby-atmos">Dolby Atmos</h5>
-              <p>Dolby Atmos will gives you powerfull and moving audio by using multiple speakers placed all around the
+              <p>Dolby Atmos will give you powerfull and moving audio by using multiple speakers placed all around the
                 room to give use high definition sound quality so that you can now pick up every bit of sound that the
                 sound producers intended you to pick up, even the tiny sounds such as when a movie character steps on a
                 twig or things approaching from behind. As the result, movies now come to live like never before making
