--- a/a2/index.html
+++ b/a2/index.html
@@ -136,7 +136,7 @@
         </div>
 
         <br>
-        <hr style="border: grey solid 1px;" size="10px">
+        <hr style="border: grey solid 1px;" width="75%">
         <br>
 
         <h3>Cutting edge projection and sound system</h3>
