--- a/a2/index.html
+++ b/a2/index.html
@@ -70,13 +70,16 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <a href="#seat-intro"><img src="media/seating-banner.jpg" class="d-block w-100" alt="Cinema seats banner"></a>
+              <a href="#seat-intro"><img src="media/seating-banner.jpg" class="d-block w-100"
+                  alt="Cinema seats banner"></a>
             </div>
             <div class="carousel-item">
-              <a href="#Dolby-vision"><img src="media/dolby-vision-banner.jpg" class="d-block w-100" alt="Dolby Vision banner"></a>
+              <a href="#Dolby-vision"><img src="media/dolby-vision-banner.jpg" class="d-block w-100"
+                  alt="Dolby Vision banner"></a>
             </div>
             <div class="carousel-item">
-              <a href="#Dolby-atmos"><img src="media/dolby-atmos-banner.jpg" class="d-block w-100" alt="Dolby Atmos banner"></a>
+              <a href="#Dolby-atmos"><img src="media/dolby-atmos-banner.jpg" class="d-block w-100"
+                  alt="Dolby Atmos banner"></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -92,7 +95,10 @@
         <h1 id="about-us-header">ABOUT US</h1>
         <br>
 
-        <p>Cinemax is a movie theatre that was established to serve local movie enthuasiasts. Eventhough Cinemax was founded a long time ago, our facilites has recently been renovated to make the experience of movie going even more enjoyable. This is an homage to all the that this local communnity has supported us, so we also wanted to give back to this lovely town.</p>
+        <p>Cinemax is a movie theatre that was established to serve local movie enthuasiasts. Eventhough Cinemax was
+          founded a long time ago, our facilites has recently been renovated to make the experience of movie going even
+          more enjoyable. This is an homage to all the that this local communnity has supported us, so we also wanted to
+          give back to this lovely town.</p>
         <br>
 
         <h3 id="seat-intro">More comfortable seats</h3>
@@ -100,7 +106,7 @@
         <p>Our goal is for you to have an immersive movie experience, with that in mind, we would like to introduce you
           to our newly equipped seats with better cushioning system. We acknowledge that movies' durations can be
           extensive, these newly upgraded seats will ensure your comfortability and prevent lumbar and back pain. </p>
-        
+
         <br><br>
 
         <div class="row">
@@ -140,7 +146,9 @@
         <br>
 
         <h3>Cutting edge projection and sound system</h3>
-        <p>As a stride toward cutting edge movie technologies, we have upgraded our movie projection and sound systems. We officially partnered with Dolby to brings you the best movie viewing experience without any compromises thanks to their Dolby 3D Vision and Dolby Atmos technologies.</p>
+        <p>As a stride toward cutting edge movie technologies, we have upgraded our movie projection and sound systems.
+          We officially partnered with Dolby to brings you the best movie viewing experience without any compromises
+          thanks to their Dolby 3D Vision and Dolby Atmos technologies.</p>
 
         <br>
 
@@ -169,7 +177,11 @@
           <div class="col-md-8 dolby-info">
             <div class="dolby-content">
               <h5 id="Dolby-atmos">Dolby Atmos</h5>
-              <p>Dolby Atmos will gives you powerfull and moving audio by using multiple speakers placed all around the room to give use high definition sound quality so that you can now pick up every bit of sound that the sound producers intended you to pick up, even the tiny sounds such as when a movie character steps on a twig or things approaching from behind. As the result, movies now come to live like never before making you feel even more immmersed in them.</p>
+              <p>Dolby Atmos will gives you powerfull and moving audio by using multiple speakers placed all around the
+                room to give use high definition sound quality so that you can now pick up every bit of sound that the
+                sound producers intended you to pick up, even the tiny sounds such as when a movie character steps on a
+                twig or things approaching from behind. As the result, movies now come to live like never before making
+                you feel even more immmersed in them.</p>
             </div>
           </div>
         </div>
@@ -246,13 +258,6 @@
         </div>
 
         <br>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
-          saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
-          exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
-          sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur
-          quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi non
-          possimus maxime itaque, voluptatum quae nesciunt expedita reprehenderit earum numquam aperiam facere ad
-          obcaecati.</p>
       </section>
       <div id="break">
       </div>
@@ -290,18 +295,6 @@
           </a>
         </div>
         <br>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
-          saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
-          exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
-          sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur
-          quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi non
-          possimus maxime itaque, voluptatum quae nesciunt expedita reprehenderit earum numquam aperiam facere ad
-          obcaecati. Accusamus, veritatis dignissimos. Hic maxime ratione porro! Ex repellendus totam, placeat
-          similique
-          voluptate quod facilis culpa id et minima consequatur veniam excepturi ea. Ratione porro ipsa minima non
-          magnam vero hic iure molestiae illum aliquam repellat perferendis ex maiores est beatae delectus in commodi
-          quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus
-          eaque expedita assumenda modi atque? Doloremque!</p>
         <div class="row row-cols-1 row-cols-md-2">
           <div class="col d-flex">
             <div class="card mb-4 flex-fill">
@@ -395,16 +388,16 @@
         <br>
         <div class="row border synopsis">
           <div class="col-md-6">
-            <h5 class="synopsis-title">Avengers: Endgame <img src="media/PG-13.svg" alt="Rated PG-13" width="20%" class="movie-rating-synopsis"></h5>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
-              saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
-              exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
-              sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur
-              quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi
-              non quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus
-              eaque expedita assumenda modi atque? Doloremque!</p>
+            <h5 class="synopsis-title">Avengers: Endgame <img src="media/PG-13.svg" alt="Rated PG-13" width="20%"
+                class="movie-rating-synopsis"></h5>
+              <h6>Plot summary: </h6>
           </div>
-          <div class="col-md-6 order-first order-md-last"><div class="trailer-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/TcMBFSGVi1c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></div>
+          <div class="col-md-6 order-first order-md-last">
+            <div class="trailer-container"><iframe width="560" height="315"
+                src="https://www.youtube.com/embed/TcMBFSGVi1c" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe></div>
+          </div>
         </div>
       </section>
 
