add sypnosis content (a2)

--- a/a2/index.html
+++ b/a2/index.html
@@ -390,7 +390,13 @@
           <div class="col-md-6">
             <h5 class="synopsis-title">Avengers: Endgame <img src="media/PG-13.svg" alt="Rated PG-13" width="20%"
                 class="movie-rating-synopsis"></h5>
-              <h6>Plot summary: </h6>
+            <br>
+            <h6>Plot summary: </h6>
+            <p>Affter vanishing half the population of the galaxy, Thanos was on the edge of fulfilling his mission.
+              However, the rest of the heroes, including Tony Stark (Iron Man), Thor, Captain America, etc. are trying
+              to look for a plan to bring back their love ones and allies to unite once again in order to fight back
+              Thanos and his army. This is the perfect sequel to Avengers Infinity War. This movie ensures a thrilling
+              and action packed movie experience.</p>
           </div>
           <div class="col-md-6 order-first order-md-last">
             <div class="trailer-container"><iframe width="560" height="315"
