sypnosis content correction

--- a/a2/index.html
+++ b/a2/index.html
@@ -392,7 +392,7 @@
                 class="movie-rating-synopsis"></h5>
             <br>
             <h6>Plot summary: </h6>
-            <p>Affter vanishing half the population of the galaxy, Thanos was on the edge of fulfilling his mission.
+            <p>After vanishing half the population of the galaxy, Thanos was on the edge of fulfilling his mission.
               However, the rest of the heroes, including Tony Stark (Iron Man), Thor, Captain America, etc. are trying
               to look for a plan to bring back their love ones and allies to unite once again in order to fight back
               Thanos and his army. This is the perfect sequel to Avengers Infinity War. This movie ensures a thrilling
