add movies schedules

--- a/a2/index.html
+++ b/a2/index.html
@@ -342,10 +342,10 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <h5 class="card-title">Avengers: Endgame</h5>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Wednesday - 9pm</p>
+                    <p class="card-text">Friday - 9pm</p>
+                    <p class="card-text">Saturday - 6pm</p>
+                    <p class="card-text">Sunday - 6pm</p>
                     <br>
                     <p class="card-text more-details"><a href="#synopsis-area"><img src="media/clapperboard.svg"
                           alt="clapperboard icon" class="more-details-icon"> More details</a></p>
@@ -364,10 +364,10 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <h5 class="card-title">Top End Wedding</h5>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Monday - 6pm</p>
+                    <p class="card-text">Tuesday - 6pm</p>
+                    <p class="card-text">Saturday - 3pm</p>
+                    <p class="card-text">Sunday - 3pm</p>
                     <br>
                     <p class="card-text more-details"><a href="#synopsis-area"><img src="media/clapperboard.svg"
                           alt="clapperboard icon" class="more-details-icon"> More details</a></p>
@@ -388,10 +388,12 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <h5 class="card-title">Dumbo</h5>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Monday - 12pm</p>
+                    <p class="card-text">Tuesday - 12pm</p>
+                    <p class="card-text">Wednesday - 6pm</p>
+                    <p class="card-text">Friday - 6pm</p>
+                    <p class="card-text">Saturday - 12pm</p>
+                    <p class="card-text">Sunday - 12pm</p>
                     <br>
                     <p class="card-text more-details"><a href="#synopsis-area"><img src="media/clapperboard.svg"
                           alt="clapperboard icon" class="more-details-icon"> More details</a></p>
@@ -410,10 +412,10 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <h5 class="card-title">The Happy Prince</h5>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
-                    <p class="card-text">Day - Hour</p>
+                    <p class="card-text">Wednesday - 12pm</p>
+                    <p class="card-text">Friday - 12pm</p>
+                    <p class="card-text">Saturday - 9pm</p>
+                    <p class="card-text">Sunday - 9pm</p>
                     <br>
                     <p class="card-text more-details"><a href="#synopsis-area"><img src="media/clapperboard.svg"
                           alt="clapperboard icon" class="more-details-icon"> More details</a></p>
