correction to about us content

--- a/a2/index.html
+++ b/a2/index.html
@@ -100,7 +100,7 @@
             enthuasiasts. Even though Cinemax was
             founded a long time ago, our facilites has recently been renovated to make the experience of movie going
             even
-            more enjoyable. This is an homage to all the that this local communnity has supported us, so we also wanted
+            more enjoyable. This is an homage to all the time that this local communnity has supported us, so we also wanted
             to
             give back to this lovely town.</p>
         </div>
