fix content for movie scheduile

--- a/a2/index.html
+++ b/a2/index.html
@@ -343,6 +343,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Avengers: Endgame</h5>
                     <p class="card-text">Wednesday - 9pm</p>
+                    <p class="card-text">Thursday - 9pm</p>
                     <p class="card-text">Friday - 9pm</p>
                     <p class="card-text">Saturday - 6pm</p>
                     <p class="card-text">Sunday - 6pm</p>
@@ -391,6 +392,7 @@
                     <p class="card-text">Monday - 12pm</p>
                     <p class="card-text">Tuesday - 12pm</p>
                     <p class="card-text">Wednesday - 6pm</p>
+                    <p class="card-text">Thursday - 6pm</p>
                     <p class="card-text">Friday - 6pm</p>
                     <p class="card-text">Saturday - 12pm</p>
                     <p class="card-text">Sunday - 12pm</p>
@@ -413,6 +415,7 @@
                   <div class="card-body">
                     <h5 class="card-title">The Happy Prince</h5>
                     <p class="card-text">Wednesday - 12pm</p>
+                    <p class="card-text">Thursday - 12pm</p>
                     <p class="card-text">Friday - 12pm</p>
                     <p class="card-text">Saturday - 9pm</p>
                     <p class="card-text">Sunday - 9pm</p>
