--- a/a2/index.html
+++ b/a2/index.html
@@ -100,7 +100,8 @@
             enthuasiasts. Even though Cinemax was
             founded a long time ago, our facilites has recently been renovated to make the experience of movie going
             even
-            more enjoyable. This is an homage to all the time that this local communnity has supported us, so we also wanted
+            more enjoyable. This is an homage to all the time that this local communnity has supported us, so we also
+            wanted
             to
             give back to this lovely town.</p>
         </div>
@@ -180,11 +181,41 @@
             </div>
           </div>
           <div class="collapse" id="collapseInfo">
-            <div class="card card-body">
-              SHOW OFF TECHNOLOGY IMAGES HERE
+            <div class="card card-body" style="width: 1000px;">
+              <div id="carouselExampleFade1" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="media/dolby-vision-img1.png" class="img-fluid" alt="Dolby Vision Image 1"
+                      style="width: 1000px; height: 500px;">
+                  </div>
+                  <div class=" carousel-item">
+                    <img src="media/dolby-vision-img2.png" class="img-fluid" alt="Dolby Vision Image 2"
+                      style="width: 1000px; height: 500px;">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="media/dolby-vision-img3.png" class="img-fluid" alt="Dolby Vision Image 3"
+                      style="width: 1000px; height: 500px;">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="media/dolby-vision-img4.png" class="img-fluid" alt="Dolby Vision Image 4"
+                      style="width: 1000px; height: 500px;">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleFade1" role="button" data-slide="prev"
+                  style="right: 75; ">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade1" role="button" data-slide="next"
+                  style="left: 75; ">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
+
 
         <br><br>
 
@@ -214,30 +245,33 @@
       <section id="pricing">
         <h1 id="pricing-header"><img src="media/tickets.svg" id="tickets-icon" alt="Tickets icon"> TICKET PRICES</h1>
         <br>
-        <h4 id="special-offer">CELEBRATE OUR GRAND RE-OPENING WITH <img
-            src="media/special-offer.png" alt="Special offer icon" style="width: 120px; vertical-align: bottom;"></h4>
+        <h4 id="special-offer">CELEBRATE OUR GRAND RE-OPENING WITH <img src="media/special-offer.png"
+            alt="Special offer icon" style="width: 120px; vertical-align: bottom;"></h4>
         <br>
         <img src="media/promotion-banner.jpg" alt="Promotion banner" width="100%">
         <br>
-        <p>To celebrate our re-opening and welcome back old as well as new movie-goers, we are offering special discounts on
+        <p>To celebrate our re-opening and welcome back old as well as new movie-goers, we are offering special
+          discounts on
           tickets for every type of seats. The discounted periods are:
           <ul>
-          <li>
-            <img src="media/popcorn.svg" alt="Popcorn icon"
-            style="width: 40px; vertical-align: bottom;"> At 12PM on weekdays (from Monday to Friday <em>only</em>, does not include Saturday nor Sunday)
-        </li>
-        <li>
-          <img src="media/popcorn.svg" alt="Popcorn icon"
-            style="width: 40px; vertical-align: bottom;"> All day long on Mondays <strong>and</strong> Wednesdays
-        </li>
-        </ul>
-        For more detailed information on our prices, please refer to the <a href="#price-table" id="price-ref">price table</a> below.
-        <br>
-        <br>
-        We have <strong>6</strong> types of seats for customers to choose from, including both adult and child seats. We hope the variety of cinema seatings will provide our audience with the best comfort.
-        <i>Images of the seats can be found below.</i>
-        <br>
-        IMAGES IMAGES
+            <li>
+              <img src="media/popcorn.svg" alt="Popcorn icon" style="width: 40px; vertical-align: bottom;"> At 12PM on
+              weekdays (from Monday to Friday <em>only</em>, does not include Saturday nor Sunday)
+            </li>
+            <li>
+              <img src="media/popcorn.svg" alt="Popcorn icon" style="width: 40px; vertical-align: bottom;"> All day long
+              on Mondays <strong>and</strong> Wednesdays
+            </li>
+          </ul>
+          For more detailed information on our prices, please refer to the <a href="#price-table" id="price-ref">price
+            table</a> below.
+          <br>
+          <br>
+          We have <strong>6</strong> types of seats for customers to choose from, including both adult and child seats.
+          We hope the variety of cinema seatings will provide our audience with the best comfort.
+          <i>Images of the seats can be found below.</i>
+          <br>
+          IMAGES IMAGES
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
           saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
           exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
@@ -458,7 +492,8 @@
               <div class="trailer-container"><iframe width="560" height="315"
                   src="https://www.youtube.com/embed/TcMBFSGVi1c" frameborder="0"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen></iframe></div>
+                  allowfullscreen></iframe>
+              </div>
             </div>
           </div>
           <div class="row synopsis">
