add responsive for Dolby vision more information

--- a/a2/index.html
+++ b/a2/index.html
@@ -181,7 +181,7 @@
             </div>
           </div>
           <div class="collapse" id="collapseInfo">
-            <div class="card card-body" style="width: 1000px;">
+            <div class="card card-body" style="width: 100%;">
               <div id="carouselExampleFade1" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
