--- a/a2/index.html
+++ b/a2/index.html
@@ -186,19 +186,19 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="media/dolby-vision-img1.png" class="img-fluid" alt="Dolby Vision Image 1"
-                      style="width: 1000px; height: 500px;">
+                      style="width: 100%; height: 500px;">
                   </div>
                   <div class=" carousel-item">
                     <img src="media/dolby-vision-img2.png" class="img-fluid" alt="Dolby Vision Image 2"
-                      style="width: 1000px; height: 500px;">
+                      style="width: 100%; height: 500px;">
                   </div>
                   <div class="carousel-item">
                     <img src="media/dolby-vision-img3.png" class="img-fluid" alt="Dolby Vision Image 3"
-                      style="width: 1000px; height: 500px;">
+                      style="width: 100%; height: 500px;">
                   </div>
                   <div class="carousel-item">
                     <img src="media/dolby-vision-img4.png" class="img-fluid" alt="Dolby Vision Image 4"
-                      style="width: 1000px; height: 500px;">
+                      style="width: 100%; height: 500px;">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade1" role="button" data-slide="prev"
