added ID for movie panels

--- a/a3/index.html
+++ b/a3/index.html
@@ -721,7 +721,7 @@
 
         <div class="row row-cols-1 row-cols-md-2">
           <div class="col d-flex">
-            <div class="card mb-4 flex-fill movie-card">
+            <div class="card mb-4 flex-fill movie-card" id="moviePanelACT">
               <div class="row no-gutters">
                 <div class="col-lg-6">
                   <img src="media/avengers.jpg" class="card-img movie-poster" alt="Avengers Endgame Poster">
@@ -750,7 +750,7 @@
             </div>
           </div>
           <div class="col d-flex">
-            <div class="card mb-4 flex-fill movie-card">
+            <div class="card mb-4 flex-fill movie-card" id="moviePanelRMC">
               <div class="row no-gutters">
                 <div class="col-lg-6">
                   <img src="media/topend-wedding.jpg" class="card-img movie-poster" alt="Top End Wedding Poster">
@@ -780,7 +780,7 @@
         </div>
         <div class="row row-cols-1 row-cols-md-2">
           <div class="col d-flex">
-            <div class="card mb-4 flex-fill movie-card">
+            <div class="card mb-4 flex-fill movie-card" id="moviePanelANM">
               <div class="row no-gutters">
                 <div class="col-lg-6">
                   <img src="media/dumbo.jpg" class="card-img movie-poster" alt="Dumbo Poster">
@@ -814,7 +814,7 @@
             </div>
           </div>
           <div class="col d-flex">
-            <div class="card mb-4 flex-fill movie-card">
+            <div class="card mb-4 flex-fill movie-card" id="moviePanelAHF">
               <div class="row no-gutters">
                 <div class="col-lg-6">
                   <img src="media/happy-prince.jpg" class="card-img movie-poster" alt="The Happy Prince Poster">
