--- a/a3/index.html
+++ b/a3/index.html
@@ -1139,7 +1139,7 @@
                     <br><br>
                     <div class="form-group">
                       <label for="cust-name">Name</label>
-                      <input type="text" name="cust[name]" id="cust-name" oninput="checkCustName()" style="width: 100%;" required>
+                      <input type="text" name="cust[name]" id="cust-name" oninput="checkAllCustInput()" style="width: 100%;" required>
                     </div>
 
                     <div class="form-group">
@@ -1148,18 +1148,18 @@
                     </div>
                     <div class="form-group">
                       <label for="cust-mobile">Mobile</label>
-                      <input type="tel" name="cust[mobile]" id="cust-mobile" oninput="checkCustMobile()" style="width: 100%;" required>
+                      <input type="tel" name="cust[mobile]" id="cust-mobile" oninput="checkAllCustInput()" style="width: 100%;" required>
                     </div>
                     <div class="form-group">
                       <label for="cust-card">Credit Card</label>
-                      <input type="text" name="cust[card]" id="cust-card" oninput="checkCustCard()" style="width: 100%;" required>
+                      <input type="text" name="cust[card]" id="cust-card" oninput="checkAllCustInput()" style="width: 100%;" required>
                     </div>
                     <div class="form-group">
                       <label for="cust-expiry">Expiry</label>
                       <input type="month" name="cust[expiry]" id="cust-expiry" style="width: 100%;" placeholder="YYYY-MM" required>
                     </div>
                     <br><br>
-                    <input type="submit" name="order" value="Order" id="order">
+                    <input type="submit" name="order" value="Order" id="order" disabled>
                   </div>
                 </div>
               </div>
